@@ -2,6 +2,8 @@
 v0.5.3:
 
     * DefaultVersionFinder: make search for update links case-insensitive.
+    * use fcntl.flock() for version locking; it's slightly less portable but
+      has much better semantics for what we want.
     * reduce number of stat() calls during bootstrap process.
     * better cleanup of "*.old.*" files from the bootstrap env.
 
